--- a/index.html
+++ b/index.html
@@ -657,9 +657,9 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">RAIOne (Smart Inventory System with Chatbot)</h3>
-                            <p class="portfolio__description">RAIOne is a smart inventory management system built for the Robotics and AI Engineering Department to digitize and streamline lab equipment borrowing and returning. The system features a user-friendly web interface built with React.js and TypeScript, and a robust backend using NestJS, GraphQL, and PostgreSQL with AI-powered Chatbot.
-                               <br>I was responsible for designing and developing the AI-powered RAIOne Line chatbot using Python and Ollama. 
-                               I integrated it with the LINE messaging platform to automate user queries, support real-time inventory updates, and handle secure authentication using JWT. The project enhances the overall user experience by offering instant assistance on availability, borrowing policies, and deadlines, reducing admin workload and improving communication efficiency.</p>
+                            <p class="portfolio__description">This is our final year project which our team developed for the Robotics and AI Engineering Department, built with React.js, TypeScript, NestJS, GraphQL, and PostgreSQL. 
+                                <br>As for my part, I designed and developed the AI-powered RAIOne LINE chatbot using Python and Ollama. My work included integrating it with LINE, enabling real-time
+                                    inventory queries with GraphQL and secure JWT-based user authentication.</p>
                             <a href="https://youtu.be/7ih4A6LsNvY" target="_blank" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -676,6 +676,49 @@
                               approaches for translating Danish text into English. Using different frameworks and models, I experimented with both
                               Transformer and LSTM architectures to optimize translation accuracy and efficiency. 
                               While some approaches demonstrated high accuracy, others highlighted challenges in tuning and computational demands.</p>
+                        </div>
+                    </div>
+                    <!--==================== PROJECT 3 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/project3.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Myanmar Trip Advisory Chatbot</h3>
+                            <p class="portfolio__description">This project was developed as part of AI technology coursework. Using Dialogflow, I integrated the Myanmar trip
+advisory chatbot into a Facebook Page Messenger, offering pop-up features for user travel preferences, destination
+recommendations, and common queries. The chatbot is designed to be user-friendly, enhanced with images to
+improve engagement and provide a more interactive experience.</p>
+                            <a href="https://youtube.com/shorts/HOEWuJdW4Ao" target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PROJECT 4 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/project4.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">TraveLink</h3>
+                            <p class="portfolio__description">This project was developed as part of a mobile application development coursework. Using MIT App Inventor and Glide, I contributed to the development of TraveLink, a travel planning mobile application that offers ready-made travel packages with pre-planned flights, accommodations, and activities. 
+                                <br>The app allows users to customize packages to suit their personal preferences and simplifies the booking process by enabling full trip arrangements in just a few clicks. 
+                                My role focused on building core functionalities and integrating booking features, while the overall UI/UX design was crafted using Figma to ensure a smooth and engaging user experience.</p>
+                            <a href="https://youtu.be/ykf1GNXuxO8" target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PROJECT 5 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/project5.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Shopping List Management Application</h3>
+                            <p class="portfolio__description">This project was developed as part of Introduction to Algorithms coursework. Using Python, I created a shopping
+list application that allows users to add and remove items, as well as calculate the total cost. The application is
+designed to efficiently manage and manipulate data, providing a simple and intuitive interface for users to track
+their shopping lists.</p>
                         </div>
                     </div>
                 </div>
