Revise personal introduction and project details
Updated personal information and qualifications in the index.html file. Added new project details and revised the introduction to reflect current academic status.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             and I'm <span class="auto-input"></span>
                         </h3>
                         <p class="home__description">
-                            With GPA: 3.75/4, First Class of Honours, I'm a fresh graduated in Bachelors' of Engineering in Robotics and Artificial Intelligence Engineering.
+                            I’m a graduate student in Modeling, Data, and Predictions at the University of Alberta with a First-Class Honours degree in Robotics and AI Engineering. I specialize in statistical modeling, machine learning, and data science, with experience in NLP projects using Python, SQL, and Hugging Face.
                         </p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
@@ -158,8 +158,9 @@
                 <div class="about__data">
                     <p class="about__description">
                         Hi I'm Saung Hnin Phyu. 
-                        Fresh graduate in Bachelor of Robotics and AI Engineering with GPA: 3.75/4, First Class of Honours from King Mongkut's Institute of Technology, Ladkrabang.
-                        I enjoy working on real-world problems that combine technology, data, and creativity to make a meaningful impact.
+                        I’m a graduate student in Modeling, Data, and Predictions at the University of Alberta, am interested in statistical modeling, machine learning, and data science. 
+                        I hold a First-Class Honours degree in Robotics and AI Engineering.
+                        I’m eager to learn new tools and value clear communication and strong teamwork throughout projects.
                         <br>
                         Experienced in NLP, data annotation, and model development from international internships and university projects. 
                         Proficient in Python, SQL, with a strong foundation in machine learning frameworks like TensorFlow and PyTorch. 
@@ -404,6 +405,19 @@
                         <div class="project__data">
                             <p>AWS Academy Graduate - AWS Academy Cloud Foundations</p>
                             <a href="/assets/pdf/aws.pdf"
+                                class="button button--flex button--small project_-button">
+                                Preview
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== Certificate 6 ====================-->
+                    <div class="project__content grid swiper-slide">
+                        <img src="/assets/img/ibm.pdf" alt="" class="project__img">
+
+                        <div class="project__data">
+                            <p>Data Science Orientation by IBM, Coursera</p>
+                            <a href="/assets/pdf/supervised.pdf"
                                 class="button button--flex button--small project_-button">
                                 Preview
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -898,9 +912,9 @@ their shopping lists.</p>
     <script>
         var typed = new Typed(".auto-input", {
             strings: [
-                "a fresh grad in Bachelor of Engineering (Robotics and AI Engineering)",
+                "a graduate in Bachelor of Engineering (Robotics and AI Engineering)",
                 "a Data Scientist",
-                "an Aspiring Data Engineer ",
+                "a Masters' student in Data Science at the University of Alberta ",
                 "an AI & NLP Enthusiast",
             ],
             typeSpeed: 100,
