--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     </div>
                     <!--==================== Certificate 6 ====================-->
                     <div class="project__content grid swiper-slide">
-                        <img src="/assets/img/ibm.pdf" alt="" class="project__img">
+                        <img src="/assets/img/ibm.png" alt="" class="project__img">
 
                         <div class="project__data">
                             <p>Data Science Orientation by IBM, Coursera</p>
